# maps-LvsS

./: Makefile  README.md  installDependencies.sh  maps.cabal  run.sh
mapImplementations/: Data.HashMap.Lazy.txt  Data.HashMap.Strict.txt  Data.IntMap.Lazy.txt  Data.IntMap.Strict.txt  Data.Map.Lazy.txt  Data.Map.Strict.txt
sources/benchmarkForOneMapImpl/: Main.hs.template  patch.sh
sources/common/: BenchmarksConfig.hs  BigDefs.hs  CommonFunctions.hs  Environments.Data.HashMap.Lazy.hs.template  Environments.Data.HashMap.Strict.hs.template  Environments.Data.IntMap.Lazy.hs.template  Environments.Data.IntMap.Strict.hs.template  Environments.Data.Map.Lazy.hs.template  Environments.Data.Map.Strict.hs.template  Ops.Data.HashMap.Lazy.hs.template  Ops.Data.HashMap.Strict.hs.template  Ops.Data.IntMap.Lazy.hs.template  Ops.Data.IntMap.Strict.hs.template  Ops.Data.Map.Lazy.hs.template  Ops.Data.Map.Strict.hs.template  Paths.hs  RealisticDefs.hs  SmallDefs.hs  TestingDefs.hs  Types.hs  UnitConv.hs  patch.sh
sources/compileForAllMapImplementations/: Main.hs
sources/postProcessCSV/: Main.hs
sources/runForAllBenchmarkTypes/: Main.hs
sources/runForAllMapImplementations/: Main.hs
